--- a/src/app/admin/features/subscriber/expiry-details/expiry-details.component.html
+++ b/src/app/admin/features/subscriber/expiry-details/expiry-details.component.html
@@ -20,11 +20,11 @@
                         <mat-date-range-picker #picker></mat-date-range-picker>
                     </mat-form-field> -->
 
-                    <mat-form-field appearance="outline">
+                    <mat-form-field appearance="outline"  style="width: 100%;">
                         <mat-date-range-input [rangePicker]="picker" >
-                            <input matStartDate matInput placeholder="Start date" [value]="fromdate"
+                            <input matStartDate matInput placeholder="Start date"
                                 (dateChange)="getFromDate($event)">
-                            <input matEndDate matInput placeholder="End date" (dateChange)="getToDate($event)" [value]="todate" >
+                            <input matEndDate matInput placeholder="End date" (dateChange)="getToDate($event)"  >
                         </mat-date-range-input>
                         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                         <mat-date-range-picker #picker></mat-date-range-picker>
