--- a/src/app/admin/features/channel_setting/_Dialogue/Channel_dialog/channel-edit/channel-edit.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/Channel_dialog/channel-edit/channel-edit.component.html
@@ -121,7 +121,7 @@
                     <span for="commission" class="me-2">Commission</span>
                 </div>
                 <div class="col-12 col-md-6 ">
-                    <input type="text" [(ngModel)]="commission" (keypress)="onKeydown($event)" class=" flex-grow-1"
+                    <input type="text" [(ngModel)]="commission"  class=" flex-grow-1"
                         (input)="checkMaxValue()" placeholder="Commission Amount">
                 </div>
             </div>
