--- a/src/app/admin/features/channel_setting/_Dialogue/Inventory/sub-inventory/sub-inventory.component.html
+++ b/src/app/admin/features/channel_setting/_Dialogue/Inventory/sub-inventory/sub-inventory.component.html
@@ -34,7 +34,7 @@
             </div>
             <div class=" col-8">
                 <div class="">
-                    <input type="checkbox" [(ngModel)]="ismei" style="width: 35px;height: 20px;">
+                    <input type="checkbox" [(ngModel)]="sub_ismei" style="width: 35px;height: 20px;">
                 </div>
             </div>
         </div>
