--- a/src/app/admin/features/channel_setting/package-reference/package-reference.component.html
+++ b/src/app/admin/features/channel_setting/package-reference/package-reference.component.html
@@ -2,7 +2,7 @@
     <h4>PACKAGE REFERENCE DETAILS</h4>
 
     <!-- <hr> -->
-    <section class="Tab col-xl-12 col-sm-12 col-12 mb-3" style="max-height: 76vh;overflow: auto;">
+    <section class="Tab col-xl-12 col-sm-12 col-12 mb-3" style="max-height: 76vh;overflow: hidden;">
         <div class="display tablist justify-content-center align-items-center  mb-3">
             <div class="tab mb-3 bttn bg" [class.active]="selectedTab === '1'" (click)="selectTab('1')">BASE PACKAGE
             </div>
@@ -27,7 +27,7 @@
         </div>
 
         <div *ngIf="selectedTab">
-            <div class="col-12 col-sm-8 align-items-center justify-content-center responsive-container"
+            <div class="col-12 col-sm-9 align-items-center justify-content-center responsive-container"
                 style="margin: auto;">
                 <!-- <ag-grid-angular #agGrid id="myGrid"  domLayout='autoHeight'
                     class="ag-theme-alpine table-class" rowAnimation [gridOptions]="gridOptions"
@@ -36,8 +36,8 @@
                     (gridReady)="onGridReady($event)"> -->
 
                 <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class" style="max-height: 775px;overflow: scroll;" 
-                    rowSelection="multiple" rowAnimation [rowSelection]="rowSelection" [gridOptions]="gridOptions"
-                    [columnDefs]="columnDefs" [rowData]="rowData" (selectionChanged)="onSelectionChanged($event)"
+                    rowSelection="multiple" rowAnimation [gridOptions]="gridOptions"
+                    [columnDefs]="columnDefs" [rowData]="rowData" (selectionChanged)="onSelectionChanged($event)" 
                     (gridReady)="onGridReady($event)" [enableCellTextSelection]="true">
                 </ag-grid-angular>
 
