--- a/src/app/admin/features/subscriber/subscriberdialogue/subscriberdialogue.component.scss
+++ b/src/app/admin/features/subscriber/subscriberdialogue/subscriberdialogue.component.scss
@@ -208,14 +208,14 @@ body {
 }
 
 // ::ng-deep {
-.select2-container .select2-selection--single {
-  box-sizing: border-box;
-  cursor: pointer;
-  display: block;
-  height: 33px !important;
-  user-select: none;
-  -webkit-user-select: none;
-}
+// .select2-container .select2-selection--single {
+//   box-sizing: border-box;
+//   cursor: pointer;
+//   display: block;
+//   height: 33px !important;
+//   user-select: none;
+//   -webkit-user-select: none;
+// }
 
 // }
 @media screen and (max-width:560px) {
@@ -251,9 +251,20 @@ body {
 }
 
 .select2-container {
-  width: 270px !important;
+  width: 250px !important;
+}
+::ng-deep .select2-container .select2-selection--single {
+  height: 45px !important;
+  margin-top: 1%;
 }
 
+::ng-deep .select2-container .select2-selection--single .select2-selection__rendered {
+  margin-top: 7px;
+}
+
+::ng-deep .select2-container--default .select2-selection--single .select2-selection__arrow {
+  top: 10px;
+}
 // ::ng-deep .ag-header-viewport {
 //   text-align: center !important;
 //   background: #3d5857 !important;
@@ -725,3 +736,4 @@ body {
       0 2px 2px rgba(black, 0.4));
   }
 }
+
