--- a/src/app/admin/features/channel_setting/lco-commission/lco-commission.component.html
+++ b/src/app/admin/features/channel_setting/lco-commission/lco-commission.component.html
@@ -1,4 +1,4 @@
-<section class="Tab col-12" style="max-height: 775px;overflow: scroll;">
+<section class="Tab col-12" style="max-height: 850px;overflow: scroll;">
 
     <div class="display tablist justify-content-center align-items-center mb-3 ">
         <div class="tab mb-2  bttn" [class.active]="selectedTab === 'dis_commission'" style="text-align: center;"
@@ -93,11 +93,11 @@
                         <div class="row input_box">
                             <div class="col d-flex justify-content-start align-items-center mb-3">
                                 <span style="font-size:17px;color: red;">SELECT LCO MEMBERSHIP</span> &nbsp;&nbsp;
-                                <input type="text" matInput [matAutocomplete]="auto" 
+                                <input type="text" matInput [matAutocomplete]="auto1" 
                                     maxlength="20" (input)="filterOperators($event)" placeholder="Select LCO MEMBERSHIP"
                                     [matAutocompleteDisabled]="false" [value]="selectedOperator?.name">
 
-                                <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayOperator">
+                                <mat-autocomplete #auto1="matAutocomplete" [displayWith]="displayOperator">
                                     <mat-option *ngFor="let operator of filteredOperators" [value]="operator.value"
                                         (click)="onMembershipchange(operator)">
                                         {{ operator.name }}
@@ -140,11 +140,11 @@
                     <option *ngFor="let lcomember of lcomembershipList" [value]="lcomember.value">{{
                         lcomember.name}}</option>
                 </select> -->
-                <input type="text" matInput [matAutocomplete]="auto"  maxlength="20"
+                <input type="text" matInput [matAutocomplete]="auto2"  maxlength="20"
                     (input)="filterOperators($event)" placeholder="Select LCO Membership"
                     [matAutocompleteDisabled]="false" [value]="selectedOperator?.name">
 
-                <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayOperator">
+                <mat-autocomplete #auto2="matAutocomplete" [displayWith]="displayOperator">
                     <mat-option *ngFor="let operator of filteredOperators" [value]="operator.value"
                         (click)="onOperatorChange(operator)">
                         {{ operator.name }}
@@ -222,11 +222,11 @@
                                         lcomember.name}}</option>
                                 </select> -->
 
-                                <input type="text" matInput [matAutocomplete]="auto" 
+                                <input type="text" matInput [matAutocomplete]="auto3" 
                                     maxlength="20" (input)="filterOperators($event)" placeholder="Select LCO Membership"
                                     [matAutocompleteDisabled]="false" [value]="selectedOperator?.name">
 
-                                <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayOperator">
+                                <mat-autocomplete #auto3="matAutocomplete" [displayWith]="displayOperator">
                                     <mat-option *ngFor="let operator of filteredOperators" [value]="operator.value"
                                         (click)="onmembershipchange(operator)">
                                         {{ operator.name }}
