--- a/src/app/admin/features/subscriber/subscriberdialogue/subscriberdialogue.component.html
+++ b/src/app/admin/features/subscriber/subscriberdialogue/subscriberdialogue.component.html
@@ -1083,7 +1083,7 @@
             </div>
         </div>
         <div class="d-flex justify-content-center align-item-center mx-4 mb-2">
-            <button type="button" class="btn btn-success me- bttn" (click)="sendMessage()">Send</button>
+            <button type="button" class="btn btn-success me-2 bttn" (click)="sendMessage()">Send</button>
             <button type="button" class="btn btn-danger bttn" (click)="onNoClick()">Cancel</button>
         </div>
     </form>
